--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,13 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.1.5</version>
 		</dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.1.1</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
